fix spacing on sidebar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -104,6 +104,7 @@ s-read-md .codeBlock {
 .pageNavList ul {
   padding-left: 1em;
   list-style: none;
+  margin-bottom: 0.5em;
 }
 .pageNavList ul ul {
   padding-left: 1em;
